--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.6.1",
     "nconf": "^0.8.4",
     "serve-favicon": "~2.3.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "validator": "^5.1.0"
   }
 }
