--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^2.1.11",
     "mongoose": "4.0.8",
     "morgan": "~1.6.1",
+    "multiparty": "^4.1.2",
     "nconf": "^0.8.4",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3",
