--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "backbone": "^1.3.2",
     "jquery": "^2.2.2",
     "requirejs": "^2.2.0",
-    "text": "^2.0.14"
+    "text": "^2.0.14",
+    "bootstrap": "^3.3.6"
   }
 }
